--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "social-share-urls",
-	"version": "0.4.0",
+	"version": "0.4.1",
 	"type": "module",
 	"files": [
 		"dist"
@@ -35,5 +35,6 @@
 		"ts-jest": "^29.0.3",
 		"typescript": "^4.6.4",
 		"vite": "^3.2.3"
-	}
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
